$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-25 (opened March 10, 2011)

	* ordisurf: got a formula interface as an alternative to define
	the model. Also now accepts `gam()` argument `select` to add an
	extra penalty to smooths so they can be penalized to zero (i.e.
	removed from the model). This is a form of model selection.
	Estimation of smoothing parameters can now be determined via
	argument `method`. Both `select` and `method` have been set to
	defaults that were implied in previous versions of the function.
	If smooth is penalized to (effectively) 0, countour plotting is
	suppressed. New argument `gamma` can be used to increase the cost
	of each degree of freedom used by a model in the GCV or UBRE/AIC
	scores used in smoothness selection. New argument `plot` can be
	used to stop ordisurf producing any graphical output.
	A plot method is now provided that can draw contour or perspective
	plots of ordisurf results, or plot the fitted GAM surface.

	* metaMDSrotate: can now rotate > 2-dim solutions so that the
	first axis is parallel to a given vector and all others are
	orthogonal to the vector (and rotated to PC if they were
	originally). Earlier had argument 'choices' which was supposed to
	select only two axes to be rotated (but failed before rev 1533),
	but now lost 'choices' and always uses all dimensions, and
	orthogonalies dim 2 and beyond against the given vector. There was
	a query in R-sig-ecology on having two vectors in 3-dim ordination
	which triggered the current changes, but this does not still
	answer to the question of
	https://stat.ethz.ch/pipermail/r-sig-ecology/2011-March/001947.html.
	It would be possible to have this with recursive metaMDSrotate for
	1..N for first 'vec', then 2..N for the second 'vec', but the
	later 'vec's could be correlated with previous axes.

	* metaMDS: 'previous.best' can now be a user-supplied
	configuration, or a result of isoMDS(). If 'previous.best' is an